Added css for round button etc

--- a/index.html
+++ b/index.html
@@ -1,30 +1,107 @@
 <html>
-    <head>
-        <title>
-            Fun Bingo!!!!
-        </title>
-    </head>
-    <body>
-        <script>
-            console.log("online bingo!!!")
 
-            var cellsArray=[];
-            for(let i = 0 ; i < 25; i++){
-                // Dynamically creates a button
-                var cell = document.createElement("BUTTON");
-                // set unique id to the cell
-                cell.id = i
-                // Add click listener to the cell
-                cell.onclick = function(e){
-                    console.log(e.target.id)
-                }
-                // pushs newly created cell to cellsArray
-                cellsArray.push(cell)
-                
-                document.body.appendChild(cell);
+<head>
+    <title>
+        Online Fun Bingo!!!!
+        
+    </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="mystyle.css"></head>
+
+<body>
+    <script>
+        console.log("online bingo!!!")
+
+        var occupied = new Array(5)
+        for (let i = 0; i < 5; i++) {
+            occupied[i] = new Array(5)
+            // Initialize current row "i" with false
+            for (let j = 0; j < 5; j++) {
+                occupied[i][j] = false
+            }
+        }
+        var board = new Array(5)
+        for (let i = 0; i < 5; i++) {
+            board[i] = new Array(5)
+        }
+
+        for (let i = 0; i < 5; i++) {
+            for (let j = 0; j < 5; j++) {
+                console.log(occupied[i][j])
+            }
+        }
+
+        var numbers = []
+        for(let i = 1; i <=25; i++ ){
+            numbers.push(i)
+        }
+        console.log(numbers)
+        var row = 0
+        var col = 0
+        for(let i = 24 ;i >=0; i--){
+            let index = randomInteger(0,i)
+            if (col == 5) {
+                col = 0
+                row = row + 1
+                board[row][col] = numbers[index]
+                col++
+            } else {
+                // cell.id = row + "," + col
+                board[row][col] = numbers[index]
+                col++
+            }
+            numbers.splice(index,1)
+        }
+
+        console.log(board)
+        function randomInteger(min, max) {
+            return Math.floor(Math.random() * (max - min + 1)) + min;
+        }
+
+        var board
+        var cellsArray = [];
+        row = 0
+        col = 0
+        for (let i = 1; i <= 25; i++) {
+            // Dynamically creates a button
+            var cell = document.createElement("BUTTON");
+            cell.className = "btn btn-success"
+            // set unique id to the cell
+            if (col == 5) {
+                col = 0
+                row = row + 1
+                cell.id = row + "," + col
+                cell.value = board[row][col] 
+                cell.innerHTML = board[row][col] 
+                col++
+            } else {
+                cell.id = row + "," + col
+                cell.value = board[row][col]
+                cell.innerHTML = board[row][col]
+                col++
             }
 
 
-        </script>
-    </body>
+            // Add click listener to the cell
+            cell.onclick = function (e) {
+                console.log(e.target.id,":",e.target.value)
+                let cellId = e.target.id
+                document.getElementById(cellId).disabled = true;
+            }
+            // push newly created cell to cellsArray
+            cellsArray.push(cell)
+
+            // For line break
+            var br = document.createElement("br");
+
+            // Append new cell to the document
+            document.body.appendChild(cell);
+            if (i % 5 == 0)
+                document.body.appendChild(br);
+        }
+    </script>
+</body>
+
 </html>
