--- a/index.html
+++ b/index.html
@@ -3,17 +3,199 @@
 <head>
     <title>
         Online Fun Bingo!!!!
-        
+
     </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="mystyle.css"></head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
+</head>
+
+<script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-database.js"></script>
 
 <body>
+    <h3>Online Bingo!</h3>
     <script>
         console.log("online bingo!!!")
+        // 
 
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyCg5IQ1AUMuEFHsixgsLo109hOdY3UQ-2Q",
+            authDomain: "awesome-project-a9acb.firebaseapp.com",
+            databaseURL: "https://awesome-project-a9acb.firebaseio.com/",
+            projectId: "awesome-project-a9acb",
+            storageBucket: "awesome-project-a9acb.appspot.com",
+            messagingSenderId: "443146221022",
+            appId: "1:443146221022:web:01b96bfda5f4f24108594f"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+
+        const db = firebase.database().ref();
+
+        var bingo = firebase.database().ref('bingo/');
+
+
+        var cellsArray = [];
+
+        bingo.on('value', function (snapshot) {
+            let value = snapshot.val()
+            if (value != -1)
+                cellClicked(value)
+
+        });
+        // 
+
+        let history = []
+
+        function printHistory(){
+            let seq = ""
+            for(let i = 0; i < history.length; i++){
+                seq=seq+", "+history[i]
+            }
+            document.getElementById("history").innerHTML = seq
+        }
+
+        function cellClicked(value) {
+            let arr = value.split(":")
+            let val = arr[1]
+            console.log("value:", value)
+            x:
+            for (let i = 0; i < 25; i++) {
+                // console.log(cellsArray[i])
+                // console.log(cellsArray[i].value)
+
+                if (val == cellsArray[i].value) {
+                    history.push(val)
+                    cellsArray[i].disabled = true;
+                    markOccupied(i)
+                    break x
+                }
+            }
+        }
+
+        function markOccupied(location) {
+            console.log("location:", location)
+            let count = 0
+            x:
+            for (let i = 0; i < 5; i++) {
+                for (let j = 0; j < 5; j++) {
+                    if (count == location) {
+                        occupied[i][j] = true
+                        iIndex = i
+                        jIndex = j
+                        console.log("Occupied:", i + "," + j)
+                        break x
+                    }
+                    count++
+                }
+            }
+            // printOccupied()
+            evaluate()
+            printHistory()
+        }
+        let iIndex = -1
+        let jIndex = -1
+        let bars = 0
+
+        function evaluate() {
+            console.log("evaluate")
+            let tempBars = 0;
+            let count = 0;
+            // Check vertical matches
+            // Count upwards
+            // Keep col fixed
+            for (let i = iIndex; i >= 0; i--) {
+                if (occupied[i][jIndex]) count++;
+                else
+                    break;
+            }
+
+            // Count downwards
+            for (let i = iIndex + 1; i < 5; i++) {
+                if (occupied[i][jIndex]) count++;
+                else
+                    break;
+            }
+
+            // Check to see if count is 5
+            if (count == 5) {
+                // Increase bar count by one
+                tempBars++;
+                // showMessage(iIndex, jIndex, "vertical");
+            }
+
+            // Reset value of count
+            count = 0;
+
+            // Check horizontal matches
+            // Count left
+            // Keep rows fixed
+            for (let j = jIndex; j >= 0; j--) {
+                if (occupied[iIndex][j]) count++;
+                else
+                    break;
+            }
+
+            // Count right
+            for (let j = jIndex + 1; j < 5; j++) {
+                if (occupied[iIndex][j]) count++;
+                else
+                    break;
+            }
+            if (count == 5) {
+                tempBars++;
+                // showMessage(iIndex, jIndex, "horizontal");
+            }
+
+
+            // Check diagonal matches
+            // reset value of count
+            count = 0;
+            if (iIndex == (jIndex)) {
+                if (occupied[0][0]) count++;
+                if (occupied[1][1]) count++;
+                if (occupied[2][2]) count++;
+                if (occupied[3][3]) count++;
+                if (occupied[4][4]) count++;
+
+            }
+            // See if count is 5
+            if (count == 5) {
+                tempBars++;
+                // showMessage(iIndex, jIndex, "diagonal1");// diagonal 1 = \
+            }
+
+
+            // reset value of count
+            count = 0;
+            if ((iIndex + jIndex) == 4) {
+                if (occupied[0][4]) count++;
+                if (occupied[1][3]) count++;
+                if (occupied[2][2]) count++;
+                if (occupied[3][1]) count++;
+                if (occupied[4][0]) count++;
+            }
+            // See if count is 5
+            if (count == 5) {
+                tempBars++;
+                // showMessage(iIndex, jIndex, "diagonal2"); // diagonal 2 = /
+            }
+
+            bars = bars + tempBars;
+            console.log("bars:",bars)
+            if (bars >= 5) {
+                console.log("WOoooooooooon!!!!!!")
+                document.getElementById("status").innerHTML = "Bravo! You Won!"
+            }
+
+            else
+                console.log("COooooontinue!!!!!!!!!!")
+        }
+
+        // Create 2-d boolean array
         var occupied = new Array(5)
         for (let i = 0; i < 5; i++) {
             occupied[i] = new Array(5)
@@ -27,21 +209,25 @@
             board[i] = new Array(5)
         }
 
-        for (let i = 0; i < 5; i++) {
-            for (let j = 0; j < 5; j++) {
-                console.log(occupied[i][j])
+        function printOccupied() {
+            console.log("Occupied:")
+            for (let i = 0; i < 5; i++) {
+                for (let j = 0; j < 5; j++) {
+                    console.log(i + "," + j + ":" + occupied[i][j])
+                }
             }
         }
 
+
         var numbers = []
-        for(let i = 1; i <=25; i++ ){
+        for (let i = 1; i <= 25; i++) {
             numbers.push(i)
         }
         console.log(numbers)
         var row = 0
         var col = 0
-        for(let i = 24 ;i >=0; i--){
-            let index = randomInteger(0,i)
+        for (let i = 24; i >= 0; i--) {
+            let index = randomInteger(0, i)
             if (col == 5) {
                 col = 0
                 row = row + 1
@@ -52,7 +238,7 @@
                 board[row][col] = numbers[index]
                 col++
             }
-            numbers.splice(index,1)
+            numbers.splice(index, 1)
         }
 
         console.log(board)
@@ -61,20 +247,20 @@
         }
 
         var board
-        var cellsArray = [];
+
         row = 0
         col = 0
         for (let i = 1; i <= 25; i++) {
             // Dynamically creates a button
             var cell = document.createElement("BUTTON");
-            cell.className = "btn btn-success"
+            cell.className = "btn btn-success example_a"
             // set unique id to the cell
             if (col == 5) {
                 col = 0
                 row = row + 1
                 cell.id = row + "," + col
-                cell.value = board[row][col] 
-                cell.innerHTML = board[row][col] 
+                cell.value = board[row][col]
+                cell.innerHTML = board[row][col]
                 col++
             } else {
                 cell.id = row + "," + col
@@ -86,9 +272,14 @@
 
             // Add click listener to the cell
             cell.onclick = function (e) {
-                console.log(e.target.id,":",e.target.value)
-                let cellId = e.target.id
-                document.getElementById(cellId).disabled = true;
+                console.log(e.target.id, ":", e.target.value)
+                let value = e.target.id + ":" + e.target.value
+                bingo.set(value);
+
+
+                // let cellId = e.target.id
+                // document.getElementById(cellId).disabled = true;
+
             }
             // push newly created cell to cellsArray
             cellsArray.push(cell)
@@ -101,7 +292,23 @@
             if (i % 5 == 0)
                 document.body.appendChild(br);
         }
+
+        function reset(){
+            console.log("reset() clicked")
+           
+            bingo.set(-1);
+            setTimeout(()=>{
+                console.log("reload")
+                location.reload();
+            },1000)
+        }
+
     </script>
+
+    <p id = "history"></p>
+    <p id ="status">Continue..</p>
+    <button class  = "btn btn-danger" onclick="reset()">Reset</button>
+
 </body>
 
 </html>
